# template-exam

./: .clang-format  .gitignore  .gitmodules  DEVEL.md  README.md  REFACTORING.md  exam.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: 1-multiple-choices.md  2-short.md  4-drawing.md  config.yml
demo/pset/: pset.md
demo/quiz/: quiz.md
docs/: .nav.yml  configuration.md  index.md  syntax.md
mre/: exam-min.md  exam.tex  problem1.tex
old-exam/: .editorconfig  .latexmkrc  Makefile  README.md  config.m.tex  config.yml  parse-yml.py  problem2.tex  problem3.tex  problem4.tex
old-exam/.devcontainer/: Dockerfile  devcontainer.json
old-exam/assets/: spirale.c
old-exam/workflows/: ci.yml
scripts/: fetch-columen.sh
src/texsmith_template_exam/: __init__.py  exam_renderer.py  markdown.py  solution_md.py
src/texsmith_template_exam/columen/: columen.sty
src/texsmith_template_exam/exam/: __init__.py  checkboxes.py  fenced_code.py  fillin.py  headings.py  mode.py  solutions.py  styles.py  version.py
src/texsmith_template_exam/exam/template/: manifest.toml  template.tex
te/poo/2020/: 2-short.md  4-program.md  Makefile  config.yml  uml-arrows.drawio
templates/exam/overrides/: heading.tex
templates/exam/template/: manifest.toml  template.tex
tests/: test_exam_fillin.py  test_exam_headings.py  test_exam_mode.py  test_exam_renderer.py  test_exam_styles.py  test_exam_version.py  test_template_tex.py
texsmith_exam/: README.md  pyproject.toml
texsmith_exam/src/texsmith_exam/: __init__.py  exam_renderer.py  solution_md.py
