[project]
name = "texsmith-exam"
version = "0.1.0"
description = "Local TeXSmith markdown extensions for exams."
readme = "README.md"
requires-python = ">=3.13"

[project.entry-points."texsmith.renderers"]
exam = "texsmith_exam.exam_renderer:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/texsmith_exam"]
